# Server/root/src/services/emailService.js
@@ -185,8 +185,9 @@ async function sendUserDeletedEmail(recipientEmail) {
 * @param {number} banTimeInSeconds - The duration of the ban in seconds.
 * @param {boolean} banPermanently - Whether the ban is permanent.
 * @param {number} prevBanNum - The number of times the user has been banned previously.
+* @param {string} banMsg - The message explaining the reason for the ban.
 */
-async function sendUserBannedEmail(recipientEmail, banTimeInSeconds, banPermanently, prevBanNum) {
+async function sendUserBannedEmail(recipientEmail, banTimeInSeconds, banPermanently, prevBanNum, banMsg) {
   const FRONTEND_BASE = process.env.FRONTEND_BASE;
   const banDuration = banPermanently ? 'permanently' : convertSecondsToDHMS(banTimeInSeconds);
   const SENDGRID_API_KEY = process.env.SENDGRID_API_KEY;
@@ -201,6 +202,8 @@ async function sendUserBannedEmail(recipientEmail, banTimeInSeconds, banPermanen
 
       We regret to inform you that your UniDomus account has been banned ${banPermanently ? 'permanently' : `for the following duration: ${banDuration}`}.
 
+      Reason for ban: ${banMsg}
+
       This is the ${prevBanNum}° time you have been banned.
 
       If you believe this was a mistake or have any questions, please contact our support team.
@@ -213,6 +216,8 @@ async function sendUserBannedEmail(recipientEmail, banTimeInSeconds, banPermanen
       <p>Dear User,</p>
       
       <p>We regret to inform you that your UniDomus account has been banned ${banPermanently ? 'permanently' : `for the following duration: <strong>${banDuration}</strong>`}.</p>
+      
+      <p><strong>Reason for ban:</strong> ${banMsg}</p>
       
       <p>This is the <strong>${prevBanNum}</strong>° time you have been banned.</p>
       
@@ -232,6 +237,7 @@ async function sendUserBannedEmail(recipientEmail, banTimeInSeconds, banPermanen
       console.error('Error sending user banned email:', error);
   }
 }
+
 
 /**
  * Sends an email with the notification details.
